--- a/Visibility network/Visibility network/MainPage.xaml
+++ b/Visibility network/Visibility network/MainPage.xaml
@@ -8,10 +8,10 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <WebView x:Name="WebView1" HorizontalAlignment="Left" Height="466" Margin="10,164,0,0" VerticalAlignment="Top" Width="340" LoadCompleted="WebView_LoadCompleted"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="64" Margin="10,10,0,0" TextWrapping="Wrap" Text="Enter ip" VerticalAlignment="Top" Width="340" FontSize="24"/>
-        <Button x:Name="button1" Content="View" HorizontalAlignment="Left" Height="48" Margin="10,111,0,0" VerticalAlignment="Top" Width="340" Click="button1_Click"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="32" Margin="10,74,0,0" TextWrapping="Wrap" Text="Please add http://" VerticalAlignment="Top" Width="340" FontSize="21.333"/>
+        <WebView x:Name="WebView1" HorizontalAlignment="Left" Height="490" Margin="10,140,0,0" VerticalAlignment="Top" Width="340" LoadCompleted="WebView_LoadCompleted"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="54" Margin="96,10,0,0" TextWrapping="Wrap" Text="Enter ip" VerticalAlignment="Top" Width="254" FontSize="29.333"/>
+        <Button x:Name="button1" Content="View/Refresh" HorizontalAlignment="Left" Height="66" Margin="10,69,0,0" VerticalAlignment="Top" Width="340" Click="button1_Click" FontSize="24"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="54" Margin="10,10,0,0" TextWrapping="Wrap" Text="http://" VerticalAlignment="Top" Width="86" FontSize="26.667"/>
 
     </Grid>
 </Page>
